--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,9 @@
 .cloud
 .google.token
 **/__pycache_
+custom_components/tahoma/__pycache__
+custom_components/tahoma/__pycache__/**
+
 
 # Ensure these YAML files are ignored, otherwise your secret data/credentials will leak.
 ip_bans.yaml
