added a local_file camera for testing

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -9,6 +9,10 @@ netatmo:
   discovery: true
   webhooks: true
 
+camera:
+  - platform: local_file
+    file_path: /config/www/deepstack/toto.jpg
+
 cloud:
 
 climate:
