--- a/configuration.yaml
+++ b/configuration.yaml
@@ -138,6 +138,7 @@ homeassistant:
     - type: trusted_networks
       trusted_networks:
         - 192.168.0.0/24
+        - 192.168.0.13
         - 127.0.0.1
         - ::1
         - 172.30.32.1
@@ -145,7 +146,10 @@ homeassistant:
     - type: homeassistant  
   whitelist_external_dirs:
     - /config
-  
+    - /config/www/
+    - /config/www/deepstack/salon
+    - /config/www/deepstack/terrasse
+    
 http:
   server_port: 8124
   base_url: https://tiarkaerell.duckdns.org:8124
