--- a/configuration.yaml
+++ b/configuration.yaml
@@ -165,6 +165,14 @@ image_processing:
     ip_address: 192.168.0.13
     port: 5000
     scan_interval: 86400
+    save_file_folder: www/deepstack/toto
+    source:
+      - entity_id: camera.local_file
+        name: face_counter_terrasse
+  - platform: deepstack_face
+    ip_address: 192.168.0.13
+    port: 5000
+    scan_interval: 86400
     save_file_folder: www/deepstack/terrasse
     source:
       - entity_id: camera.camterrasse
