--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@
 .storage
 .cloud
 .google.token
+www/camera
 www/deepstack
 custom_components/tahoma/__pycache__
 custom_components/tahoma/__pycache__/**
