--- a/automations.yaml
+++ b/automations.yaml
@@ -1,3 +1,50 @@
+- alias: Set Qubino to Comfort
+  trigger:
+    platform: state
+    entity_id: input_select.qubino
+    to: 'Confort'
+  action:
+    service: light.turn_on
+    entity_id: light.qubino_goap_zmnhjd1_flush_dimmer_pilot_wire_level
+    data:
+      brightness: 100
+  id: 322e1962112842dab4defab990286212
+- alias: Set Qubino to Eco
+  trigger:
+    platform: state
+    entity_id: input_select.qubino
+    to: 'Eco'
+  action:
+    service: light.turn_on
+    entity_id: light.qubino_goap_zmnhjd1_flush_dimmer_pilot_wire_level
+    data:
+      brightness: 60
+  id: 8397b8f4cccd4dca90996ba38e760ba4
+- alias: Set Qubino to Anti Freeze
+  trigger:
+    platform: state
+    entity_id: input_select.qubino
+    to: 'Hors Gel'
+  action:
+    service: light.turn_on
+    entity_id: light.qubino_goap_zmnhjd1_flush_dimmer_pilot_wire_level
+    data:
+      brightness: 30
+  id: 04d972cb89ba4fce96b669c95e4e4e48
+- alias: Set Qubino to Stop
+  trigger:
+    platform: state
+    entity_id: input_select.qubino
+    to: 'Eteint'
+  action:
+    service: light.turn_on
+    entity_id: light.qubino_goap_zmnhjd1_flush_dimmer_pilot_wire_level
+    data:
+      brightness: 0
+  id: 9d3e9fcf237449eaac1bd771e1509b0b
+
+##########
+
 - alias: Scan for faces when motion detected outside
   trigger:
   - platform: state
@@ -23,26 +70,21 @@
 ########################################################################################    
 
 - id: Movement Detected Inside
-  alias: mouvement détecté dedans
+  alias: Netatmo Webhook
+  initial_state: 'on'
   trigger:
-  - platform: event
-    event_type: netatmo_movement
-  - platform: event
-    event_type: netatmo_person
-  - platform: event
-    event_type: netatmo_other
+    platform: webhook
+    webhook_id: netatmo
   action:
-  - data_template:
-      message: mouvement détecté {{ trigger.event.data.event.message }}
-    service: notify.google_push_pixel_2
-  - service: camera.snapshot
-    data:
-      entity_id: camera.camsalon
-      filename: 'www/camera/salon-{{ now().strftime("%Y-%m-%d-%H%M%S") }}.jpg'
-  - service: camera.snapshot
-    data:
-      entity_id: camera.camsalon
-      filename: 'www/camera/salon-latest.jpg'
+  - service: notify.google_push_pixel_2
+    data_template:
+      message: mouvement détecté
+  - service: mqtt.publish
+    data_template:
+      topic: 'netatmo/update'
+      retain: true
+      payload_template: >
+        {{ trigger.json | tojson }}
     
 ########################################################################################    
 
