--- a/configuration.yaml
+++ b/configuration.yaml
@@ -9,6 +9,14 @@ netatmo:
   discovery: true
   webhooks: true
 
+binary_sensor:
+- platform: template
+  sensors:
+    netatmo_webhook_trigger:
+      device_class: motion
+      friendly_name: Netatmo webhook trigger
+      value_template: "{{ is_state('sensor.netatmo_webhook_trigger', 'NOC-human') }}"
+
 camera:
 - platform: local_file
   file_path: /config/www/deepstack/toto.jpg
@@ -204,6 +212,16 @@ input_boolean:
     initial: off
     icon:  mdi:briefcase-account
 
+input_select:
+  qubino:
+    name: Qubino Modes
+    options:
+     - Eteint
+     - "Hors Gel"
+     - Eco
+     - Confort
+    initial: Eco
+
 life360:
   accounts:
   - username: !secret email
@@ -259,6 +277,16 @@ remote:
   host: 192.168.0.73
     
 sensor:
+- platform: mqtt
+  name: Netatmo webhook trigger
+  state_topic: 'netatmo/update'
+  expire_after: 20
+  value_template: '{{ value_json.push_type  }}'
+- platform: mqtt
+  name: Netatmo webhook
+  state_topic: 'netatmo/update'
+  value_template: '{{ value_json.snapshot_id  }}'
+  json_attributes_topic: 'netatmo/update'
 - platform: darksky
   api_key: !secret darksky-api-key
   hourly_forecast:
