--- a/configuration.yaml
+++ b/configuration.yaml
@@ -149,15 +149,13 @@ homeassistant:
   whitelist_external_dirs:
     - /config
     - /config/www/
+    - /config/www/camera
     - /config/www/deepstack/salon
     - /config/www/deepstack/terrasse
   auth_providers:
     - type: trusted_networks
       trusted_networks:
       - 192.168.0.0/24
-      - 192.168.0.13
-      - 127.0.0.1
-      - ::1
       - 172.30.32.1
       allow_bypass_login: true
     - type: homeassistant
