--- a/configuration.yaml
+++ b/configuration.yaml
@@ -162,7 +162,7 @@ homeassistant:
 
 http:
   server_port: 8124
-  base_url: https://tiarkaerell.duckdns.org:8124
+  base_url: https://tiarkaerell.duckdns.org
   ssl_certificate: /ssl/fullchain.pem
   ssl_key: /ssl/privkey.pem
 
