--- a/configuration.yaml
+++ b/configuration.yaml
@@ -299,7 +299,7 @@ sensor:
     chauffage_bureau:
       friendly_name: Chauffage
       value_template: >
-        {% if state_attr('light.qubino_goap_zmnhjd1_flush_dimmer_pilot_wire_level','brightness') == "None" %}
+        {% if states.light.qubino_goap_zmnhjd1_flush_dimmer_pilot_wire_level.state == "off" %}
           Eteint
         {% elif (state_attr('light.qubino_goap_zmnhjd1_flush_dimmer_pilot_wire_level','brightness') | float) >= 25 and
           (state_attr('light.qubino_goap_zmnhjd1_flush_dimmer_pilot_wire_level','brightness') | float) <= 35 %}
@@ -309,6 +309,18 @@ sensor:
           Eco
         {% elif (state_attr('light.qubino_goap_zmnhjd1_flush_dimmer_pilot_wire_level','brightness') | float) >= 95 %}
           Confort
+        {% endif %}
+      icon_template: >
+        {% if states.light.qubino_goap_zmnhjd1_flush_dimmer_pilot_wire_level.state == "off" %}
+          mdi:radiator-off
+        {% elif (state_attr('light.qubino_goap_zmnhjd1_flush_dimmer_pilot_wire_level','brightness') | float) >= 25 and
+          (state_attr('light.qubino_goap_zmnhjd1_flush_dimmer_pilot_wire_level','brightness') | float) <= 35 %}
+          mdi:snowflake
+        {% elif (state_attr('light.qubino_goap_zmnhjd1_flush_dimmer_pilot_wire_level','brightness') | float) >= 55 and
+          (state_attr('light.qubino_goap_zmnhjd1_flush_dimmer_pilot_wire_level','brightness') | float) <= 65 %}
+          mdi:radiator-disabled
+        {% elif (state_attr('light.qubino_goap_zmnhjd1_flush_dimmer_pilot_wire_level','brightness') | float) >= 95 %}
+          mdi:radiator
         {% endif %}
     home:
       friendly_name: Home presence
