--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -313,7 +313,7 @@ views:
         name: Volet Porte Fenêtre
   - type: entities
     title: Bureau
-    show_header_toggle: true
+    show_header_toggle: false
     entities:
       - entity: cover.rolling_shutter_4
         name: Volet
