--- a/configuration.yaml
+++ b/configuration.yaml
@@ -296,6 +296,36 @@ sensor:
   - precip_intensity
 - platform: template
   sensors:
+    netatmo_type:
+      friendly_name: Netatmo webhook
+      value_template: >-
+        {%- if is_state_attr("sensor.netatmo_webhook", "push_type", "NOC-animal") %}
+            Animal
+        {%- elif is_state_attr("sensor.netatmo_webhook", "push_type", "NOC-human") %}
+            Personne
+        {%- elif is_state_attr("sensor.netatmo_webhook", "push_type", "NOC-movement") %}
+            Movement
+        {%- elif is_state_attr("sensor.netatmo_webhook", "push_type", "NOC-vehicle") %}
+            Véhicule
+        {%- elif is_state_attr("sensor.netatmo_webhook", "push_type", "topology_changed") %}
+            Info
+        {%- elif is_state_attr("sensor.netatmo_webhook", "push_type", "NOC-light_mode") %}
+            Lumière
+        {% endif %}
+      icon_template: >-
+        {%- if is_state_attr("sensor.netatmo_webhook", "push_type", "NOC-animal") %}
+            mdi:dog-side
+        {%- elif is_state_attr("sensor.netatmo_webhook", "push_type", "NOC-human") %}
+            mdi:human
+        {%- elif is_state_attr("sensor.netatmo_webhook", "push_type", "NOC-movement") %}
+            mdi:weather-windy
+        {%- elif is_state_attr("sensor.netatmo_webhook", "push_type", "NOC-vehicle") %}
+            mdi:car-hatchback
+        {%- elif is_state_attr("sensor.netatmo_webhook", "push_type", "topology_changed") %}
+            mdi:information-variant
+        {%- elif is_state_attr("sensor.netatmo_webhook", "push_type", "NOC-light_mode") %}
+            mdi:lightbulb-on
+        {% endif %}
     chauffage_bureau:
       friendly_name: Chauffage
       value_template: >
