--- a/configuration.yaml
+++ b/configuration.yaml
@@ -110,7 +110,7 @@ downloader:
 #      track_new_devices: false
 
 google:
-  client_id: !secret a
+  client_id: !secret google-client-id
   client_secret: !secret google-client-secret
 
 google_assistant:
