split automation into separate files.

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -400,5 +400,5 @@ zwave:
 #device_tracker: !include device_tracker.yaml
 zone: !include zones.yaml
 group: !include groups.yaml
-automation: !include automations.yaml
+automation: !include_dir_list automations/
 script: !include scripts.yaml
