--- a/automations/netatmo/DownloadSnapshotTerrasse.yaml
+++ b/automations/netatmo/DownloadSnapshotTerrasse.yaml
@@ -2,7 +2,10 @@ alias: Download Snapshot Terrasse
 initial_state: 'on'
 trigger:
   - platform: mqtt
-    topic: 'netatmo/update/terrasse'
+    topic: 'netatmo/update'
+condition:
+  - condition: template
+    value_template: "{{ trigger.payload_json['device_id'] == '70:ee:50:39:a5:a4' }}"
 action:
   - service: downloader.download_file
     data_template:
