--- a/configuration.yaml
+++ b/configuration.yaml
@@ -283,10 +283,10 @@ sensor:
   expire_after: 20
   value_template: '{{ value_json.push_type  }}'
 - platform: mqtt
-  name: Netatmo terrasse
+  name: Netatmo webhook
   state_topic: 'netatmo/update/terrasse'
   value_template: '{{ value_json.snapshot_id  }}'
-  json_attributes_topic: 'netatmo/updatee/terrasse'
+  json_attributes_topic: 'netatmo/update/terrasse'
 - platform: darksky
   api_key: !secret darksky-api-key
   hourly_forecast:
@@ -301,31 +301,31 @@ sensor:
     netatmo_type:
       friendly_name: Netatmo webhook type
       value_template: >-
-        {%- if is_state_attr("sensor.netatmo_terrasse", "push_type", "NOC-animal") %}
+        {%- if is_state_attr("sensor.netatmo_webhook", "push_type", "NOC-animal") %}
             Animal
-        {%- elif is_state_attr("sensor.netatmo_terrasse", "push_type", "NOC-human") %}
+        {%- elif is_state_attr("sensor.netatmo_webhook", "push_type", "NOC-human") %}
             Personne
-        {%- elif is_state_attr("sensor.netatmo_terrasse", "push_type", "NOC-movement") %}
+        {%- elif is_state_attr("sensor.netatmo_webhook", "push_type", "NOC-movement") %}
             Movement
-        {%- elif is_state_attr("sensor.netatmo_terrasse", "push_type", "NOC-vehicle") %}
+        {%- elif is_state_attr("sensor.netatmo_webhook", "push_type", "NOC-vehicle") %}
             Véhicule
-        {%- elif is_state_attr("sensor.netatmo_terrasse", "push_type", "topology_changed") %}
+        {%- elif is_state_attr("sensor.netatmo_webhook", "push_type", "topology_changed") %}
             Info
-        {%- elif is_state_attr("sensor.netatmo_terrasse", "push_type", "NOC-light_mode") %}
+        {%- elif is_state_attr("sensor.netatmo_webhook", "push_type", "NOC-light_mode") %}
             Lumière
         {% endif %}
       icon_template: >-
-        {%- if is_state_attr("sensor.netatmo_terrasse", "push_type", "NOC-animal") %}
+        {%- if is_state_attr("sensor.netatmo_webhook", "push_type", "NOC-animal") %}
             mdi:dog-side
-        {%- elif is_state_attr("sensor.netatmo_terrasse", "push_type", "NOC-human") %}
+        {%- elif is_state_attr("sensor.netatmo_webhook", "push_type", "NOC-human") %}
             mdi:human
-        {%- elif is_state_attr("sensor.netatmo_terrasse", "push_type", "NOC-movement") %}
+        {%- elif is_state_attr("sensor.netatmo_webhook", "push_type", "NOC-movement") %}
             mdi:weather-windy
-        {%- elif is_state_attr("sensor.netatmo_terrasse", "push_type", "NOC-vehicle") %}
+        {%- elif is_state_attr("sensor.netatmo_webhook", "push_type", "NOC-vehicle") %}
             mdi:car-hatchback
-        {%- elif is_state_attr("sensor.netatmo_terrasse", "push_type", "topology_changed") %}
+        {%- elif is_state_attr("sensor.netatmo_webhook", "push_type", "topology_changed") %}
             mdi:information-variant
-        {%- elif is_state_attr("sensor.netatmo_terrasse", "push_type", "NOC-light_mode") %}
+        {%- elif is_state_attr("sensor.netatmo_webhook", "push_type", "NOC-light_mode") %}
             mdi:lightbulb-on
         {% endif %}
     chauffage_bureau:
