--- a/automations/netatmo/DownloadSnapshotTerrasse.yaml
+++ b/automations/netatmo/DownloadSnapshotTerrasse.yaml
@@ -27,6 +27,13 @@ action:
         "filename": "CamTerrasse_{{ trigger.payload_json['event_type'] }}_latest.jpg",
         "overwrite": "true"
       }
+  - service: downloader.download_file
+    data_template:
+      { "url": "{{ trigger.payload_json['snapshot_url'] }}",
+        "subdir": "camera",
+        "filename": "CamTerrasse_latest.jpg",
+        "overwrite": "true"
+      }
   - delay:
       seconds: 5
   - service: image_processing.scan
